@@ -7,7 +7,7 @@
 	<license>http://www.gnu.org/copyleft/gpl.html GNU/GPL</license>
 	<authorEmail>pasamio@gmail.com</authorEmail>
 	<authorUrl>http://sammoffatt.com.au</authorUrl>
-	<version>1.0.8</version>
+	<version>1.0.9</version>
 	<description>JAuthTools: Keeps a seperate table in sync with an LDAP user.</description>
 	<files>
 			<filename mambot="ldap.advsync">ldap.advsync.php</filename>
